fix dropdown menu z-index

--- a/src/index.css
+++ b/src/index.css
@@ -275,6 +275,7 @@ button:focus-visible {
   gap: 0.2rem;
   padding: 0.2rem;
   border-radius: 0.6rem;
+  z-index: 10;
 }
 
 .dropdownMenuButton {
@@ -295,6 +296,7 @@ button:focus-visible {
 
 .dropdownMenuItem {
   height: 3rem;
+  z-index: 10;
 }
 
 .dropdownMenuItemButton {
